# huffman-prefix-codes

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  index.html
img/: fast-huffman.odp  huffman-tree-canonical.dot  huffman-tree.dot  ratios.ods
src/: 01-naive-huffman.cpp  02-canonical-huffman.cpp  03-fast-huffman.cpp  04-fast-lengths.cpp  05-dumb-length-limiting.cpp  06-smart-length-limiting.cpp  main.cpp  utils.cpp  utils.h
